<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="car" type="buu.informatics.s59160625.parking.Car"/>
        <variable name="car2" type="buu.informatics.s59160625.parking.Car"/>
        <variable name="car3" type="buu.informatics.s59160625.parking.Car"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
        <Button
            android:id="@+id/bt1_button"
            android:layout_width="@dimen/width_bt"
            android:layout_height="@dimen/heigth_bt"
            android:text="@string/bt1_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/bt2_button"
            app:layout_constraintEnd_toStartOf="@+id/bt2_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/bt2_button"
            android:layout_width="@dimen/width_bt"
            android:layout_height="@dimen/heigth_bt"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="52dp"
            android:text="@string/bt2_text"
            app:layout_constraintBottom_toTopOf="@+id/carId01_edit"
            app:layout_constraintEnd_toStartOf="@+id/bt3_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/bt1_button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/bt3_button"
            android:layout_width="101dp"
            android:layout_height="100dp"
            android:text="@string/bt3_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/bt2_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/bt2_button" />

        <EditText
            android:id="@+id/carId01_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/car_id"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/brand01_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt3_button" />

        <EditText
            android:id="@+id/brand01_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="43dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/brand_text"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/fullname_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carId01_edit" />

        <EditText
            android:id="@+id/fullname_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="296dp"
            android:ems="10"
            android:hint="@string/fullname_text"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/brand01_edit" />

        <Button
            android:id="@+id/update_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/update_string"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cancel_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel"
            android:visibility="invisible"
            app:layout_constraintBaseline_toBaselineOf="@+id/update_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/update_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
